WHAT IS NEW?

???uary 28 2??? [J̶u̶m̶u̶l̶e̶n̶t̶ Jocoserious]

  *** New Features
    * Shift Tile tileset animation command. Non-animated uses likely! [Ralph]
    * Attacks can set a tag if their targetting fails [James]
    * New attack bitset "Replace stored targets" [James]
    * Uploading your game to itch.io now supports web build too [James]
  
  *** Bug Fixes
    * It is now possible to re-enable any tag disabled battle menu item,
      not just specific attacks [James]
    * Fix tags menu so you can type spaces without choosing a tag [James]
    * Renamed "Store Target" to "Add targets to stored targets" to reflect
      how it actually works, and fix incorrect documentation about how
      it interacts with "Delete Stored Targets" [James]
    * Replacing equipment when your inventory is full no longer deletes
      the item you are unequipping [James]
    * If you use the -nojoy command line argument on custom, then -nojoy
      is passed to "Test Game" also [James]
  
  *** New Plotscripting Features
    * "running on web" command

October 28 2024 [Ichorescent]

  *** Highlights
    * Ports
      * New experimental web port (lacks save game support)
      * Steam Achievements support
      * Distribute to itch.io option
      * Commercial console ports such as Switch, PS4/5 and XBox
      * Android port doesn't currently work on Android 12 or newer
       (don't worry this will get fixed in the future)
      * Linux packages and games will now work without installing libraries
      * Builds to support ancient Win95 PCs
    * Marvellous new features and fixes, including but not limited to:
      * New battle features including Turncoat and Defector
      * New script commands including variable length extra data arrays
      * New slice features and improved slice editor GUI
      * Improved support for screen resolutions other than 320x200
      * Improved mouse/touch support
      * Improvements to both fullscreen and windowed modes